--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,6 +2,11 @@ include: package:pedantic_mono/analysis_options.yaml
 
 linter:
   rules:
+    sort_pub_dependencies: false
+
+analyzer:
+  errors:
+    unreachable_from_main: false
 
 dart_code_metrics:
   extends:
