--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -2,12 +2,20 @@ include: package:pedantic_mono/analysis_options.yaml
 
 linter:
   rules:
-    sort_pub_dependencies: false
+    - sort_pub_dependencies: false
 
 analyzer:
+  plugins:
+    - custom_lint
+  exclude:
+    - "**/*.g.dart"
+    - "**/*.freezed.dart"
   errors:
     unreachable_from_main: false
+    invalid_annotation_target: ignore
 
 dart_code_metrics:
   extends:
     - recommended
+  rules:
+    - unnecessary-trailing-comma: false
