--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,13 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  flutter_riverpod: ^2.6.1
+  riverpod_annotation: ^2.6.1
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
+  retrofit: ^4.4.2
+  logger: ^2.5.0
+  dio: ^5.8.0+1
 
 dev_dependencies:
   flutter_test:
@@ -19,6 +26,14 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   pedantic_mono: ^1.30.3
+  riverpod_generator: ^2.6.5
+  build_runner: ^2.4.15
+  custom_lint: ^0.7.5
+  riverpod_lint: ^2.6.5
+  freezed: ^3.0.6
+  json_serializable: ^6.9.5
+  retrofit_generator: ^9.2.0
+  flutter_flavorizr: ^2.4.0
 
 flutter:
   uses-material-design: true
