--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
   "cSpell.words": [
     "buildlog",
     "cupertino",
+    "flavorizr",
     "mvvm",
+    "riverpod",
     "swiftpm",
     "Symbolication"
   ],
