--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   retrofit: ^4.4.2
   logger: ^2.5.0
   dio: ^5.8.0+1
+  easy_localization: ^3.0.7+1
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,7 @@ dev_dependencies:
   json_serializable: ^6.9.5
   retrofit_generator: ^9.2.0
   flutter_flavorizr: ^2.4.0
+  dart_code_metrics_presets: ^2.22.0
 
 flutter:
   uses-material-design: true
