--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   freezed_annotation: ^3.0.0
   json_annotation: ^4.9.0
 
+  # Routing
+  auto_route: ^10.0.1
+
   # Networking
   dio: ^5.8.0+1
   retrofit: ^4.4.2
@@ -45,6 +48,7 @@ dev_dependencies:
   freezed: ^3.0.6
   json_serializable: ^6.9.5
   retrofit_generator: ^9.2.0
+  auto_route_generator: ^10.0.1
 
 flutter:
   uses-material-design: true
