--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,13 @@ dependencies:
   # Networking
   dio: ^5.8.0+1
   retrofit: ^4.4.2
+  pretty_dio_logger: ^1.4.0
 
   # Misc
   cupertino_icons: ^1.0.8
   logger: ^2.5.0
   easy_localization: ^3.0.7+1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
